base/ejbca/ejbca-intermediate-cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ejbca-intermediate-cert-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /ejbca/ra/cert
spec:
  rules:
    - host: i.pki.bpsusine.com
      http:
        paths:
          - path: /safy-intermediate-ca.cer
            pathType: ImplementationSpecific
            backend:
              service:
                name: ejbca-service
                port:
                  name: proxied-https
