base/ejbca/ejbca-intermediate-crl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ejbca-intermediate-crl-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: >
      rewrite ^/
      /ejbca/publicweb/crls/search.cgi?iHash=lNZzXGxLv1J4%2BSbHzkfYwViyE1M
      break;
spec:
  tls:
    - hosts:
        - c.pki.bpsusine.com
      secretName: ejbca-crl-cert
  rules:
    - host: c.pki.bpsusine.com
      http:
        paths:
          - path: /safy-intermediate-ca.crl
            pathType: ImplementationSpecific
            backend:
              service:
                name: ejbca-service
                port:
                  name: proxied-https
