base/ejbca/ejbca-ocsp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ejbca-ocsp-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: >
      rewrite ^/
      /ejbca/publicweb/status/ocsp
      break;
spec:
  tls:
    - hosts:
        - o.pki.bpsusine.com
      secretName: ejbca-ocsp-cert
  rules:
    - host: o.pki.bpsusine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ejbca-service
                port:
                  name: proxied-https
