base/ejbca/ejbca-root-crl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ejbca-root-crl-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /ejbca/publicweb/crls/search.cgi
spec:
  rules:
    - host: c.pki.bpsusine.com
      http:
        paths:
          - path: /safy-root-ca.crl
            pathType: ImplementationSpecific
            backend:
              service:
                name: ejbca-service
                port:
                  name: proxied-https
